--- a/PlayMusic View/MainWindow.xaml
+++ b/PlayMusic View/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlayMusic_View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="PlayMusic .Net" Height="450" Width="800">
+    
+    <Frame >
 
-    </Grid>
+    </Frame>
+    
 </Window>
